# DiscordHook

./: CMakeLists.txt  README.md
executable_ver/: main.cpp
global_files/: Globals.h  Patterns.h  TypeChecker.h
library_ver/: Internal.cpp  Internal.h  dllmain.cpp
